<resources>
    <string name="app_name" translatable="false">FastToHome</string>
    <string name="apiUrl" translatable="false">http://10.0.2.2/php/webService/api.php</string>
    <string name="imgUrl" translatable="false">http://10.0.2.2/php/webService/</string>

    <string name="buttonEntrar">INICIAR SESIÓN</string>
    <string name="buttonRegistro">REGÍSTRATE</string>
    <string name="buttonSiguientePaso">SIGUIENTE PASO</string>

    <string name="titulosRegistro">Registro</string>
    <string name="transporteDron">DRON</string>
    <string name="transporteRepartidor">REPARTIDOR</string>
    <string name="servicioDisponible">¡El servicio está disponible en tu ubicación!</string>
    <string name="servicioNoDisponible">El servicio no está disponible en tu ubicación.</string>

    <string name="zonas">Zonas del mapa:</string>


    <string name="userName">Nombre:</string>
    <string name="userDni">Dni:</string>
    <string name="userLastname">Apellidos:</string>
    <string name="userTlf">Teléfono:</string>
    <string name="userEmail">Correo Elecrónico:</string>
    <string name="userPassword">Contraseña:</string>
    <string name="userPasswordConfirmation">Confirmar Contraseña:</string>
    <string name="userDirNumero">Número:</string>
    <string name="userDirCp">Código Postal:</string>
    <string name="userDirCalle">Calle:</string>
    <string name="userDirCiudad">Ciudad:</string>
    <string name="userDirOtrosDatos">Otros:</string>
    <string name="title_activity_principal">principal</string>
    <string name="title_home">INICIO</string>
    <string name="title_pedidos">PEDIDOS</string>
    <string name="title_activity_ventana_principal">ventanaPrincipal</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="texto_bienvenida">Bienvenido:</string>
    <string name="patron_nombre">^(([A-ZÁÉÍÓÚÑ]{1}[a-záéíóúüñ]*)(\\s)?)((((((((de)|(del)|(la)|(las)|(los))\\s)?)?){1,2})(([A-ZÁÉÍÑÓ]{1}[a-záéíñóúü\\.]*)(\\s([A-ZÁÉÍÑÓ]{1}[a-záéíñóúü\\.]*))?){1})?)$</string>
    <string name="patron_apellido">^(([A-ZÁÉÍÓÚÑ]{1}[a-záéíóúüñ]*)(\\s)?)((((((((de)|(del)|(la)|(las)|(los))\\s)?)?){1,2})(([A-ZÁÉÍÑÓ]{1}[a-záéíñóúü\\.]*)(\\s([A-ZÁÉÍÑÓ]{1}[a-záéíñóúü\\.]*))?){1})?)$</string>
    <string name="patron_dni">(([x-z]|[X-Z]{1})([-]?)(\\d{7})([-]?)([a-z]|[A-Z]{1}))|((\\d{8})([-]?)([a-z]|[A-Z]{1}))</string>
    <string name="patron_telefono">(\\+34|0034|34)?[ -]*(6|7|9)[ -]*([0-9][ -]*){8}</string>
    <string name="patron_email">[a-z0-9!#$%&amp;\'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&amp;\'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?</string>
    <string name="patron_pass">^(?=\\w*\\d)(?=\\w*[A-Z])(?=\\w*[a-z])\\S{8,20}$</string>
    <string name="title_activity_seleccionar_productos">Seleccionar Productos</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- Checkout activity -->
    <string name="title_activity_finalizar_pedido">Finalizar Pedido</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Desafortunadamente, Google Pay is
        no esta disponible en tu telefono.</string>
    <string name="payments_show_name" translatable="false">EL pago se realizo con éxito por %s!
    </string>
    <string name="title_activity_comprobar_zona">ComprobarZona</string>


</resources>