<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.registro.registroPaso1DatosUsuario">

    <EditText
        android:id="@+id/ediTextemail"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textWebEmailAddress|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:text="@string/userEmail"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

    <TextView
        android:id="@+id/titleDatosUsuarios"
        android:layout_width="359dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulosRegistro"
        android:textAlignment="viewStart"
        android:textColor="@color/principalFastToHome"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/userName"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleDatosUsuarios" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/userTlf"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDni" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/userDni"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellidos" />

    <EditText
        android:id="@+id/etDni"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/userLastname"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/principalFastToHome"
        android:onClick="irPasoPassword"
        android:text="@string/buttonSiguientePaso"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>