<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.registro.registroPaso3Direccion">

    <Button
        android:id="@+id/button2"
        android:layout_width="59dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/principalFastToHome"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_baseline_add_location_alt_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDireccion"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/principalFastToHome"
        android:onClick="accionRegistro"
        android:text="@string/buttonSiguientePaso"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/userDirOtrosDatos"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCiudad" />

    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="212dp"
        android:text="@string/userDirCiudad"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalle" />

    <EditText
        android:id="@+id/etCodigoPostal"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="116dp"
        android:text="@string/userDirCp"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalle" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/userDirNumero"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalle" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulosRegistro"
        android:textAlignment="viewStart"
        android:textColor="@color/principalFastToHome"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/userDirCalle"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/etCalle"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <EditText
        android:id="@+id/etOtros"
        android:layout_width="362dp"
        android:layout_height="73dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>