<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.registro.registroPaso2Password">

    <Button
        android:id="@+id/buttonPassword"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/principalFastToHome"
        android:onClick="irPasoDireccionFinal"
        android:text="@string/buttonSiguientePaso"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPasswordConfirmR"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/userPasswordConfirmation"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordR" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="359dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulosRegistro"
        android:textAlignment="viewStart"
        android:textColor="@color/principalFastToHome"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPasswordR"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/userPassword"
        android:textColor="@color/principalFastToHome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>