<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.pedido.seleccionarTransporteZona">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="356dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:text="@string/zonas"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="321dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:text="@string/transporteRepartidor"
        app:icon="@drawable/ic_twotone_pedal_bike_24"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="397dp"
        android:layout_height="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapType="normal"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/transporteDron"
        app:icon="@mipmap/ic_launcher_foreground"
        app:iconSize="50dp"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="234dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        android:text="Transportes disponibles:"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>